--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@openzeppelin/contracts": "^5.0.2",
     "dotenv": "^16.4.5",
     "keccak256": "^1.0.6",
-    "merkletreejs": "^0.3.11"
+    "merkletreejs": "^0.3.11",
+    "sqlite3": "^5.1.7",
+    "xlsx": "^0.18.5"
   }
 }
