--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "keccak256": "^1.0.6",
     "merkletreejs": "^0.3.11",
     "sqlite3": "^5.1.7",
+    "web3": "^4.9.0",
     "xlsx": "^0.18.5"
   }
 }
