--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "merkletreejs": "^0.3.11",
     "sqlite3": "^5.1.7",
     "web3": "^4.9.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "xlsx-populate": "^1.21.0"
   }
 }
