--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ node_modules
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/chain-31337
 
-/ghostDB/cryptoAes
+.exe
 .db
 .mod
 .go
